Version 0.0.2
- moved to neopixel library
- changing led's on every second E131 packet. seems to reduce flicker but not get rid of it. 
- using 400khz timing on led helps with flicker

version 0.0.3
- removed fastled code

Version 0.0.4
- changed wifimanager to hopefully get a proper webserver working
- not done in this version added Wifi startup feed back, puple ring of led's before it tries to conect
- rebuilding main webpage

Version 0.0.5
- rebuilt the webpage now reads and sends the univers and address corectly
- note: wifi LED check has been removed, add back in later


things to do:
- make a diffrent pattern for wifi check
- make a confimation for wifi conected