@@ -18,4 +18,5 @@ lib_deps = forkineye/E131@^1.0.0
         ;WiFiManager ; remove this
         alanswx/ESPAsyncWiFiManager @ ^0.23
         https://github.com/me-no-dev/ESPAsyncWebServer.git
+        https://github.com/forkineye/ESPAsyncE131
 monitor_speed = 115200
